<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorMaterialGrey50"
    android:weightSum="1"
    android:fitsSystemWindows="true">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/action_bar_height">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/bottom_bar_height"
            android:weightSum="1">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_marginBottom="@dimen/small_space"
                android:layout_height="200dp"
                android:background="@color/white"
                android:elevation="2dp">

                <android.support.v4.view.ViewPager
                    android:id="@+id/vp_hottest"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"/>

                <me.relex.circleindicator.CircleIndicator
                    android:id="@+id/indicator"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_gravity="bottom"/>

            </FrameLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/small_space"
                android:layout_marginRight="@dimen/small_space"
                android:layout_marginBottom="@dimen/small_space">


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="@dimen/small_space"
                        android:paddingBottom="@dimen/small_space"
                        android:drawableLeft="@drawable/ic_city_18dp"
                        android:drawablePadding="@dimen/small_space"
                        android:text="@string/hot_cities"
                        android:textSize="@dimen/normal_text_size"
                        android:textColor="@color/colorMaterialGrey700"/>

                    <ProgressBar
                        android:id="@+id/city_progress_bar"
                        android:layout_width="16dp"
                        android:layout_height="16dp"
                        android:layout_marginLeft="@dimen/small_space"
                        android:layout_gravity="center_vertical"
                        android:indeterminate="true"
                        android:visibility="gone"/>

                </LinearLayout>


                <com.example.journey.lib.MyGridView
                    android:id="@+id/grid_view_site"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:columnWidth="90dp"
                    android:horizontalSpacing="2dp"
                    android:verticalSpacing="2dp"
                    android:nestedScrollingEnabled="false"
                    android:numColumns="3"
                    android:stretchMode="columnWidth"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/tiny_space"
                        android:paddingTop="@dimen/small_space"
                        android:paddingBottom="@dimen/small_space"
                        android:drawableLeft="@drawable/ic_wind_flag"
                        android:drawablePadding="@dimen/small_space"
                        android:text="@string/hot_posts"
                        android:textSize="@dimen/normal_text_size"
                        android:textColor="@color/colorMaterialGrey700"/>

                    <ProgressBar
                        android:id="@+id/post_progress_bar"
                        android:layout_width="16dp"
                        android:layout_height="16dp"
                        android:layout_marginLeft="@dimen/small_space"
                        android:layout_gravity="center_vertical"
                        android:indeterminate="true"
                        android:visibility="gone"/>

                </LinearLayout>

                <com.example.journey.lib.MyGridView
                    android:id="@+id/grid_view_post"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:columnWidth="90dp"
                    android:horizontalSpacing="2dp"
                    android:verticalSpacing="2dp"
                    android:nestedScrollingEnabled="false"
                    android:numColumns="2"
                    android:stretchMode="columnWidth"/>

            </LinearLayout>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/create_in_first_page"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginLeft="@dimen/fab_margin"
        android:layout_marginRight="@dimen/fab_margin"
        android:layout_marginTop="@dimen/fab_margin"
        android:layout_marginBottom="72dp"
        android:src="@drawable/ic_add_white_24dp"
        android:focusableInTouchMode="true"
        app:backgroundTint="@color/colorPrimary"
        app:layout_behavior="com.example.journey.helper.ScrollAwareFABBehavior"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/action_bar_height"
        android:elevation="@dimen/action_bar_elevation"
        android:gravity="center_vertical"
        android:background="@color/colorPrimary"
        android:fitsSystemWindows="true">

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="@dimen/normal_space">

            <EditText
                android:id="@+id/search_et_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@drawable/search_edittext_shape"
                android:drawableLeft="@drawable/ic_search_transparent_white_24dp"
                android:drawablePadding="@dimen/tiny_space"
                android:paddingRight="56dp"
                android:hint="@string/please_enter_destination"
                android:textColorHint="@color/transparent_white"
                android:imeOptions="actionSearch"
                android:inputType="text"
                android:textSize="@dimen/normal_text_size"
                android:textColor="@color/white"
                android:nextFocusUp="@id/search_et_input"
                android:nextFocusLeft="@id/search_et_input"/>

            <ImageView
                android:id="@+id/search_iv_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|center_vertical"
                android:layout_marginRight="@dimen/small_space"
                android:src="@drawable/ic_highlight_off_black_24dp"
                android:visibility="gone"/>

        </FrameLayout>

        <ImageButton
            android:id="@+id/choose_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/normal_space"
            android:src="@drawable/ic_location_map_24dp"
            android:background="?selectableItemBackgroundBorderless"/>

        <Button
            android:id="@+id/search_btn_back"
            android:layout_width="@dimen/btn_width"
            android:layout_height="@dimen/btn_height"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn_search_bg"
            android:text="搜索"
            android:textColor="@color/color_white"
            android:visibility="gone"/>

    </LinearLayout>

    <ListView
        android:id="@+id/main_lv_search_results"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/action_bar_height"
        android:visibility="gone"
        android:elevation="6dp">
    </ListView>

</android.support.design.widget.CoordinatorLayout>