<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorMaterialGrey100"
    android:fitsSystemWindows="false">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="260dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/background"/>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/half_transparent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/action_bar_height">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="@dimen/small_space">

                    <ImageButton
                        android:id="@+id/message_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/small_space"
                        android:src="@drawable/notification_transition"
                        style="?actionButtonStyle"/>
                    <ImageButton
                        android:id="@+id/chat_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/small_space"
                        android:src="@drawable/chat_message_transition"
                        style="?actionButtonStyle"/>

                    <ImageView
                        android:id="@+id/setting_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/small_space"
                        android:src="@drawable/ic_settings"
                        android:visibility="gone"
                        style="?actionButtonStyle"/>

                </LinearLayout>


            </RelativeLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/portrait_button"
                    android:layout_width="@dimen/large_avatar_size"
                    android:layout_height="@dimen/large_avatar_size"
                    android:src="@drawable/ic_account_circle_white_24dp"
                    app:civ_border_width="@dimen/stroke_width"
                    app:civ_border_color="@color/white"/>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/small_space"
                    android:gravity="center_vertical">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/id_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:maxLines="1"
                            android:text="@string/click_to_login"
                            android:textSize="@dimen/large_text_size"
                            android:textStyle="bold"
                            android:textColor="@color/white"/>

                        <ImageView
                            android:id="@+id/sex_icon"
                            android:layout_width="16dp"
                            android:layout_height="16dp"
                            android:layout_marginLeft="@dimen/small_space"
                            android:layout_marginRight="@dimen/small_space"
                            android:src="@drawable/male_pic"
                            android:visibility="gone"/>

                        <TextView
                            android:id="@+id/age_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:maxLines="1"
                            android:textSize="@dimen/large_text_size"
                            android:textStyle="bold"
                            android:textColor="@color/white"
                            android:visibility="gone"/>
                    </LinearLayout>

                    <TextView
                        android:id="@+id/personal_intro"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:maxLines="3"
                        android:textSize="@dimen/normal_text_size"
                        android:textColor="@color/white"
                        android:visibility="gone"/>

                </LinearLayout>

                <TextView
                    android:id="@+id/edit_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:padding="@dimen/small_space"
                    android:layout_margin="@dimen/small_space"
                    android:drawableLeft="@drawable/ic_edit"
                    android:drawablePadding="@dimen/small_space"
                    android:background="@drawable/button_border"
                    android:textColor="@color/transparent_white"
                    android:textSize="@dimen/tiny_text_size"
                    android:text="@string/edit"/>
                <TextView
                    android:id="@+id/checkIn_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:padding="@dimen/small_space"
                    android:layout_margin="@dimen/small_space"
                    android:drawableLeft="@drawable/ic_check_black_24dp"
                    android:drawablePadding="@dimen/small_space"
                    android:background="@drawable/button_border"
                    android:textColor="@color/transparent_white"
                    android:textSize="@dimen/tiny_text_size"
                    android:text="@string/checkIn" />

            </LinearLayout>

        </LinearLayout>

    </FrameLayout>
    
    <ListView
        android:id="@+id/personal_msg_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="0.1dp"
        android:clipToPadding="false"
        android:background="@color/white">
    </ListView>

    <LinearLayout
        android:id="@+id/settings"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:foreground="?selectableItemBackground">

        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:background="@color/colorMaterialGrey500"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/small_space"
            android:paddingLeft="@dimen/normal_space"
            android:paddingRight="@dimen/small_space"
            android:paddingTop="@dimen/small_space"
            android:background="@color/white">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerInParent="true"
                android:layout_marginRight="@dimen/small_space"
                android:src="@drawable/ic_cog_box"/>

            <TextView
                android:id="@+id/item1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerInParent="true"
                android:text="设置"
                android:textSize="@dimen/normal_text_size"/>

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

            <ImageView
                android:id="@+id/right_res"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true"
                android:src="@drawable/ic_chevron_right_black_24dp"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:background="@color/colorMaterialGrey500"/>

    </LinearLayout>



</LinearLayout>